--- a/index.html
+++ b/index.html
@@ -3,152 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RanchRP Sentencing Calculator</title>
-  <!-- Tailwind via CDN for quick styling on GitHub Pages -->
+  <title>Ranch RP – MSO Sentencing Calculator</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body{background-color:#0f172a} /* slate‑900 */
+    body{background:#0f172a}
+    .years{color:#c084fc} /* violet‑400 */
+    .days{color:#fbbf24}  /* amber‑400 */
   </style>
 </head>
-<body class="text-gray-100 min-h-screen flex flex-col items-center p-6">
-  <h1 class="text-3xl font-bold mb-4">Ranch RP ‑ MSO Sentencing Calculator</h1>
+<body class="text-gray-100 min-h-screen flex flex-col items-center p-6 gap-6">
+  <h1 class="text-3xl font-bold text-center">Ranch RP – MSO Sentencing Calculator</h1>
 
-  <!-- Charges Table -->
-  <div class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6">
-    <h2 class="text-xl font-semibold mb-2">Charges</h2>
+  <!-- Time Served Timer (moved to top) -->
+  <section class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 space-y-3">
+    <h2 class="text-xl font-semibold">Time Served <span class="text-xs font-normal text-slate-400">(1 minute = 1 day)</span></h2>
+    <div class="flex flex-wrap items-center gap-3 text-sm">
+      <span id="timer-display" class="text-lg font-mono min-w-[4.5rem]">00:00</span>
+      <button id="timer-start" class="px-3 py-1 bg-indigo-600 hover:bg-indigo-700 rounded-lg">Start</button>
+      <button id="timer-pause" class="px-3 py-1 bg-yellow-600 hover:bg-yellow-700 rounded-lg">Pause</button>
+      <button id="timer-reset" class="px-3 py-1 bg-rose-600 hover:bg-rose-700 rounded-lg">Reset</button>
+      <input type="hidden" id="served-minutes" value="0">
+    </div>
+  </section>
+
+  <!-- Charges -->
+  <section class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 space-y-3">
+    <h2 class="text-xl font-semibold">Charges</h2>
     <table id="charges-table" class="w-full text-sm">
       <thead>
-        <tr>
-          <th class="text-left pb-1">Value</th>
-          <th class="text-left pb-1">Unit</th>
-          <th class="text-left pb-1">Delete</th>
+        <tr class="border-b border-slate-700 text-left">
+          <th class="pb-1">Value</th>
+          <th class="pb-1">Unit</th>
+          <th class="pb-1">Delete</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
-    <button id="add-charge" class="mt-3 px-4 py-1 bg-emerald-600 hover:bg-emerald-700 rounded-lg">Add Charge</button>
-  </div>
+    <div class="flex flex-wrap gap-2 pt-3">
+      <button id="add-charge" class="px-4 py-1 bg-emerald-600 hover:bg-emerald-700 rounded-lg">Add Charge&nbsp;(↵)</button>
+      <button id="clear-all" class="px-4 py-1 bg-rose-600 hover:bg-rose-700 rounded-lg">Clear All</button>
+    </div>
+  </section>
 
   <!-- Modifiers -->
-  <div class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 mt-6">
-    <h2 class="text-xl font-semibold mb-2">Modifiers</h2>
+  <section class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 space-y-3">
+    <h2 class="text-xl font-semibold">Modifiers</h2>
     <div class="grid sm:grid-cols-2 gap-2 text-sm">
-      <label><input type="checkbox" id="mod-aiding" class="mr-1">Aiding & Abetting (50% of total time)</label>
-      <label><input type="checkbox" id="mod-ps" class="mr-1">Public Servants Enhancement (+60 Days)</label>
-      <label><input type="checkbox" id="mod-threat" class="mr-1">Threat to Society (+3 Years)</label>
-      <label><input type="checkbox" id="mod-habitual" class="mr-1">Habitual Offender (+100 Days)</label>
-      <label><input type="checkbox" id="mod-nuisance" class="mr-1">Public Nuisance Offender (+60 Days)</label>
+      <label class="cursor-pointer"><input type="checkbox" id="mod-aiding" class="mr-1 accent-violet-500">Aiding &amp; Abetting <span class="days">(50% off)</span></label>
+      <label class="cursor-pointer"><input type="checkbox" id="mod-ps" class="mr-1 accent-violet-500">Public Servants Enhancement <span class="days">(+60 Days)</span></label>
+      <label class="cursor-pointer"><input type="checkbox" id="mod-threat" class="mr-1 accent-violet-500">Threat to Society <span class="years">(+3 Years)</span></label>
+      <label class="cursor-pointer"><input type="checkbox" id="mod-habitual" class="mr-1 accent-violet-500">Habitual Offender <span class="days">(+100 Days)</span></label>
+      <label class="cursor-pointer"><input type="checkbox" id="mod-nuisance" class="mr-1 accent-violet-500">Public Nuisance Offender <span class="days">(+60 Days)</span></label>
     </div>
-  </div>
+  </section>
 
-  <!-- Calculate Button & Result -->
-  <div class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 mt-6 flex flex-col items-center">
-    <button id="calculate" class="px-6 py-2 bg-indigo-600 hover:bg-indigo-700 rounded-lg text-lg font-semibold">Calculate Sentence</button>
-    <p id="result" class="mt-4 text-2xl font-bold"></p>
-  </div>
+  <!-- Result -->
+  <section class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 flex flex-col items-center gap-2">
+    <p id="result" class="text-3xl font-bold"></p>
+    <div class="flex items-center gap-2 text-sm">
+      <span id="result-days" class="text-slate-400"></span>
+      <button id="copy-days" class="px-2 py-0.5 bg-slate-700 hover:bg-slate-600 rounded">Copy Days</button>
+    </div>
+  </section>
 
 <script>
-  // Helpers
-  const chargesBody = document.querySelector('#charges-table tbody');
-  document.getElementById('add-charge').addEventListener('click', addRow);
-  document.getElementById('calculate').addEventListener('click', calculateSentence);
+  /* ------------------- GLOBALS & UTILS ------------------- */
+  const qs = sel => document.querySelector(sel);
+  const chargesBody = qs('#charges-table tbody');
+  let lastTotalDays = 0;
 
-  // Add first blank row on load
+  function convertDaysToYears(days){
+    if(days<401) return {years:0, days};
+    const years=1+Math.floor((days-401)/100);
+    return {years, days:days-(401+(years-1)*100)};
+  }
+
+  /* ------------------- CHARGES TABLE ------------------- */
   addRow();
+  qs('#add-charge').onclick=addRow;
+  qs('#clear-all').onclick=()=>{chargesBody.innerHTML='';addRow();realtimeCalc();};
 
-  function addRow() {
-    const tr = document.createElement('tr');
-    tr.className = 'border-t border-slate-700';
-
-    // Value input
-    const tdValue = document.createElement('td');
-    const input = document.createElement('input');
-    input.type = 'number';
-    input.min = '0';
-    input.step = '1';
-    input.className = 'w-24 bg-slate-900/50 rounded p-1';
-    tdValue.appendChild(input);
-
-    // Unit select
-    const tdUnit = document.createElement('td');
-    const select = document.createElement('select');
-    select.className = 'bg-slate-900/50 rounded p-1';
-    ['Days', 'Years'].forEach(u => {
-      const opt = document.createElement('option');
-      opt.value = u.toLowerCase();
-      opt.textContent = u;
-      select.appendChild(opt);
-    });
-    tdUnit.appendChild(select);
-
-    // Delete button
-    const tdDel = document.createElement('td');
-    const btn = document.createElement('button');
-    btn.textContent = '✕';
-    btn.className = 'text-red-400 hover:text-red-200';
-    btn.addEventListener('click', () => tr.remove());
-    tdDel.appendChild(btn);
-
-    [tdValue, tdUnit, tdDel].forEach(td => td.classList.add('pr-2', 'py-1'));
-    tr.append(tdValue, tdUnit, tdDel);
+  function addRow(){
+    const tr=document.createElement('tr');
+    tr.className='border-t border-slate-700';
+    const tdV=document.createElement('td');
+    const inp=Object.assign(document.createElement('input'),{type:'number',min:'0',step:'1',className:'w-24 bg-slate-900/50 rounded p-1 text-right'});
+    tdV.appendChild(inp);
+    const tdU=document.createElement('td');
+    const sel=document.createElement('select');
+    sel.className='bg-slate-900/50 rounded p-1';
+    ['Days','Years'].forEach(u=>sel.add(new Option(u,u.toLowerCase())));
+    tdU.appendChild(sel);
+    const tdD=document.createElement('td');
+    const del=document.createElement('button');
+    del.textContent='✕';
+    del.className='text-red-400 hover:text-red-200';
+    del.onclick=()=>{tr.remove();realtimeCalc();};
+    tdD.appendChild(del);
+    [tdV,tdU,tdD].forEach(td=>td.classList.add('pr-2','py-1'));
+    tr.append(tdV,tdU,tdD);
     chargesBody.appendChild(tr);
+    inp.focus();
   }
 
-  function convertDaysToYears(days) {
-    if (days < 401) {
-      return { years: 0, days: days };
+  /* Keyboard shortcuts */
+  chargesBody.addEventListener('keydown',e=>{
+    const row=e.target.closest('tr'); if(!row) return;
+    if(e.key==='Enter'){e.preventDefault(); addRow();}
+    if(e.key==='Delete' && e.ctrlKey){e.preventDefault(); row.remove(); realtimeCalc();}
+    if(['ArrowUp','ArrowDown'].includes(e.key) && e.target.tagName==='INPUT'){
+      e.preventDefault(); const sel=row.querySelector('select'); sel.value=sel.value==='days'?'years':'days'; sel.dispatchEvent(new Event('change',{bubbles:true}));
     }
-    const years = 1 + Math.floor((days - 401) / 100);
-    const remaining = days - (401 + (years - 1) * 100);
-    return { years, days: remaining };
-  }
+  });
 
-  function calculateSentence() {
-    let dayCharges = 0;
-    let yearCharges = 0;
+  /* ------------------- REAL‑TIME CALC ------------------- */
+  document.addEventListener('input',e=>{if(e.target.closest('#charges-table')||e.target.id.startsWith('mod-')) realtimeCalc();});
+  document.addEventListener('change',e=>{if(e.target.closest('#charges-table')||e.target.id.startsWith('mod-')) realtimeCalc();});
 
-    [...chargesBody.querySelectorAll('tr')].forEach(row => {
-      const value = parseInt(row.children[0].querySelector('input').value, 10) || 0;
-      const unit = row.children[1].querySelector('select').value;
-      if (unit === 'days') {
-        dayCharges += value;
-      } else {
-        yearCharges += value;
-      }
+  function realtimeCalc(){
+    let dayCharges=0, yearCharges=0;
+    chargesBody.querySelectorAll('tr').forEach(r=>{
+      const v=parseInt(r.querySelector('input').value||0,10);
+      if(r.querySelector('select').value==='days') dayCharges+=v; else yearCharges+=v;
     });
-
-    // Convert day‑based charges
-    const converted = convertDaysToYears(dayCharges);
-    let totalYears = yearCharges + converted.years;
-    let remainingDays = converted.days;
-
-    // Work entirely in days for mods but keep existing years safe
-    let totalDaysEquivalent = totalYears * 1440 + remainingDays;
-
-    // Apply modifiers
-    if (document.getElementById('mod-aiding').checked) {
-      totalDaysEquivalent *= 0.5; // 50% reduction – adjust if your rules differ
-    }
-    if (document.getElementById('mod-ps').checked) {
-      totalDaysEquivalent += 60;
-    }
-    if (document.getElementById('mod-threat').checked) {
-      totalDaysEquivalent += 3 * 1440;
-    }
-    if (document.getElementById('mod-habitual').checked) {
-      totalDaysEquivalent += 100;
-    }
-    if (document.getElementById('mod-nuisance').checked) {
-      totalDaysEquivalent += 60;
-    }
-
-    // Final rounding & reconvert
-    totalDaysEquivalent = Math.round(totalDaysEquivalent);
-    const finalYears = Math.floor(totalDaysEquivalent / 1440);
-    const finalDays = totalDaysEquivalent % 1440;
-
-    document.getElementById('result').textContent = `${finalYears} years  ${finalDays} days`;
+    const conv=convertDaysToYears(dayCharges);
+    let totalDays=(yearCharges+conv.years)*1440+conv.days;
+    if(qs('#mod-aiding').checked) totalDays*=0.5;
+    if(qs('#mod-ps').checked) totalDays+=60;
+    if(qs('#mod-threat').checked) totalDays+=3*1440;
+    if(qs('#mod-habitual').checked) totalDays+=100;
+    if(qs('#mod-nuisance').checked) totalDays+=60;
+    totalDays=Math.max(0,Math.round(totalDays-parseInt(qs('#served-minutes').value,10)));
+    lastTotalDays=totalDays;
+    const yrs=Math.floor(totalDays/1440), d=totalDays%1440;
+    qs('#result').innerHTML=`<span class="years">${yrs}</span> year${yrs!==1?'s':''}  <span class="days">${d}</span> day${d!==1?'s':''}`;
+    qs('#result-days').textContent=`(${totalDays} total days)`;
   }
+
+  realtimeCalc();
+
+  /* Copy Days */
+  qs('#copy-days').onclick=async()=>{try{await navigator.clipboard.writeText(String(lastTotalDays));qs('#copy-days').textContent='Copied!';setTimeout(()=>qs('#copy-days').textContent='Copy Days',1000);}catch{alert('Copy failed');}};
+
+  /* ------------------- TIMER ------------------- */
+  const tDisplay=qs('#timer-display');
+  let elapsed=0,interval=null;
+  function updateTimer(){const m=String(Math.floor(elapsed/60)).padStart(2,'0');const s=String(elapsed%60).padStart(2,'0');tDisplay.textContent=`${m}:${s}`; qs('#served-minutes').value=Math.floor(elapsed/60); realtimeCalc();}
+  qs('#timer-start').onclick=()=>{if(interval) return; interval=setInterval(()=>{elapsed++; updateTimer();},1000);} ;
+  qs('#timer-pause').onclick=()=>{clearInterval(interval); interval=null;};
+  qs('#timer-reset').onclick=()=>{clearInterval(interval); interval=null; elapsed=0; updateTimer();};
+  updateTimer();
 </script>
 </body>
 </html>
