--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Time Served Timer (moved to top) -->
   <section class="w-full max-w-3xl bg-slate-800/60 rounded-2xl shadow-lg p-6 space-y-3">
-    <h2 class="text-xl font-semibold">Time Served <span class="text-xs font-normal text-slate-400">(1 minute = 1 day)</span></h2>
+    <h2 class="text-xl font-semibold">Time Served <span class="text-xs font-normal text-slate-400">(Subtract this to the time in the charges section directly below, not the converted time)</span></h2>
     <div class="flex flex-wrap items-center gap-3 text-sm">
       <span id="timer-display" class="text-lg font-mono min-w-[4.5rem]">00:00</span>
       <button id="timer-start" class="px-3 py-1 bg-indigo-600 hover:bg-indigo-700 rounded-lg">Start</button>
